# bs-config

./: .gitignore  .mise.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/bs_config/: __init__.py  env.py
src/bs_config/_implementation/: default.py  direnv.py  scoped.py  toml.py
src/tests/env/: test_env.py  test_getter.py  test_scoped.py
tests/env/: conftest.py  test_getter.py  test_scoped.py  test_toml.py
tests/env/data/: example.toml
