[project]
requires-python = ">=3.11, <3.14"
name = "bs-config"
description = "Config"
version = "1.1.1"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/BlindfoldedSurgery/bs-config"

[project.optional-dependencies]
dotenv=[
    "python-dotenv >=1.0.0, <2.0.0",
]

[dependency-groups]
dev = [
    "commitizen ==4.1.0",
    "coverage [toml] >=7.3.1, <8.0.0",
    "mypy ==1.14.*",
    "pre-commit >=4.0.0, <5.0.0",
    "pytest >=8.0.0, <9.0.0",
    "pytest-cov >=6.0.0, <7.0.0",
    "ruff ==0.8.6",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/bs_config",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",

]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["bs_config"]
