[project]
requires-python = ">=3.13, <3.15"
name = "bs-config"
description = "Config"
version = "3.4.0"
authors = [{ name = "Björn Petersen", email = "pypi@bjoernpetersen.net" }]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

[project.urls]
changelog = "https://github.com/BlindfoldedSurgery/bs-config/blob/main/CHANGELOG.md"
homepage = "https://github.com/BlindfoldedSurgery/bs-config"
source = "https://github.com/BlindfoldedSurgery/bs-config"

[project.optional-dependencies]
dotenv=[
    "python-dotenv >=1, <2",
]

[dependency-groups]
dev = [
    "commitizen==4.10.0",
    "coverage[toml]==7.12.*",
    "mypy==1.18.*",
    "pre-commit==4.4.*",
    "pytest==9.0.*",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff ==0.14.5",
]

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md"
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
